# ai-healthcare-assistant

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
ai/: analyzer.py  client.py  prompts.py  utils.py  voice_utils.py
core/: analyzer.py  config.py  scenarios.py
media/sample_outputs/: 20250805210504_result.json  20250805222746_result.json  20250805224005_result.json  20250805224055_result.json
sample_outputs/: 20250805194027_result.json
